<resources>
    <string name="app_name">Todo List</string>
    <string name="add_task">Добавить задачу</string>
    <string name="mark_as_completed">Отметить задачу как выполненную</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="example_task">Пример задачи</string>
    <string name="enter_task">Введите задачу</string>
    <string name="add_button_task">Добавить</string>
    <string name="completed_task">Выполненные</string>
    <string name="all_task">Все задачи</string>
    <string name="calendar">Calendar</string>
    <string name="add_new_task">Новая задача</string>
    <string name="task_title">Название</string>
    <string name="task_description">Описание</string>
    <string name="enter_description">Добавьте описание (опционально)</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="name">Название задачи</string>
    <string name="name_of_task">Название задачи</string>
    <string name="description_of_task">Описание задачи</string>
    <string name="timer">Таймер</string>
    <string name="edit">Редактировать</string>
    <string name="restore">Восстановить</string>
    <string name="delete">Удалить</string>
    <string name="time_tracker">Фокус-таймер</string>
    <string name="_25_00">25:00</string>
    <string name="focus_time">Время фокусировки</string>
    <string name="todo_name">Название задачи</string>
    <string name="play">Play</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="check_db">🔍 Check DB</string>
    <string name="clear">🗑️ Clear</string>
    <string name="export">📁 Export</string>
    <string name="add_100">➕ Add 100</string>
    <string name="debug">🐛 Debug</string>
    <string name="back_debag">Back</string>
    <string name="export_menu">📤 Экспорт</string>
    <string name="import_menu">📥 Импорт</string>
    <string name="settings_menu">⚙️ Настройки</string>
    <string name="Sorting">Сортировка</string>
    <string name="my_task">Мои задачи</string>
    <string name="update">Обновить</string>
    <string name="widget_description">Список активных задач</string>
    <string name="deadline">Дедлайн (опционально)</string>
    <string name="not_installed">Не установлен</string>
    <string name="tags">Тэги</string>
    <string name="restore_debug">🔄 RESTORE</string>
    <string name="backup">💾 BACKUP</string>
    <string name="menu">settings</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="default_task_name">[Название задачи]</string>
    <string name="request_dnd_permission">[Пожалуйста, разрешите доступ к режиму "Не беспокоить" в настройках.]</string>
    <string name="dnd_enabled">[Режим "Не беспокоить" включен]</string>
    <string name="dnd_disabled">[Режим "Не беспокоить" отключен]</string>
    <string name="focus_mode">[Время фокусировки]</string>
    <string name="short_break_mode">[Короткий перерыв]</string>
    <string name="long_break_mode">[Длинный перерыв]</string>
</resources>